<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="debug_menu_ad_information">Ad Information</string>
    <string name="debug_menu_creative_preview">Creative Preview</string>
    <string name="debug_menu_title">Select a Debug Mode</string>
    <string name="debug_menu_troubleshooting">Troubleshooting</string>
    <string name="decline">Decline</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="block_for_one_day_text">1 day</string>
    <string name="block_for_one_hour_text">1 hour</string>
    <string name="block_for_one_minute_text">1 minute</string>
    <string name="block_for_text">Do not disturb me for</string>
    <string name="block_notifications_description">Temporally block notifications</string>
    <string name="block_notifications_text">Do not disturb me</string>
    <string name="general_error_description">An error occurred, please try again later.</string>
    <string name="network_error_description">Check your internet connection and try again.</string>
    <string name="notification_event_cancel">Cancel</string>
    <string name="notification_event_confirm">OK</string>
    <string name="notification_settings">Settings</string>
    <string name="report_reuse_text">"%1$s doesn't belong to me"</string>
    <string name="report_reuse_text_confirmation">Are you sure you want to stop receiving verification notifications for %1$s across all your devices?</string>
    <string name="report_reuse_text_description">Block verification notifications across all my devices</string>
    <string name="setting_saved_toast_text">Your preferences have been saved</string>
    <string name="title_activity_settings">Notification settings</string>
    <string name="hockeyapp_crash_dialog_app_name_fallback">This app</string>
    <string name="hockeyapp_crash_dialog_message">Would you like to send an anonymous report so we can fix the problem?</string>
    <string name="hockeyapp_crash_dialog_negative_button">"Don't Send"</string>
    <string name="hockeyapp_crash_dialog_neutral_button">Always Send</string>
    <string name="hockeyapp_crash_dialog_positive_button">Send Report</string>
    <string name="hockeyapp_crash_dialog_title">%s Unexpectedly Quit</string>
    <string name="hockeyapp_dialog_error_message">An error has occurred</string>
    <string name="hockeyapp_dialog_error_title">Error</string>
    <string name="hockeyapp_dialog_negative_button">Cancel</string>
    <string name="hockeyapp_dialog_positive_button">OK</string>
    <string name="hockeyapp_download_failed_dialog_message">The update could not be downloaded. Would you like to try again?</string>
    <string name="hockeyapp_download_failed_dialog_negative_button">Cancel</string>
    <string name="hockeyapp_download_failed_dialog_positive_button">Retry</string>
    <string name="hockeyapp_download_failed_dialog_title">Download Failed</string>
    <string name="hockeyapp_error_no_network_message">Your device is not connected to the internet. Please resolve connectivity issues and try again.</string>
    <string name="hockeyapp_expiry_info_text">%s has expired. Please check HockeyApp for any updates.</string>
    <string name="hockeyapp_expiry_info_title">Build Expired</string>
    <string name="hockeyapp_feedback_attach_file">Attach File</string>
    <string name="hockeyapp_feedback_attach_picture">Attach Picture</string>
    <string name="hockeyapp_feedback_attachment_button_text">Add Attachment</string>
    <string name="hockeyapp_feedback_attachment_error">Error</string>
    <string name="hockeyapp_feedback_attachment_loading">Loading…</string>
    <string name="hockeyapp_feedback_email_hint">Email</string>
    <string name="hockeyapp_feedback_failed_text">Would you like to send your feedback again?</string>
    <string name="hockeyapp_feedback_failed_title">Pending</string>
    <string name="hockeyapp_feedback_fetching_feedback_text">Retrieving discussions…</string>
    <string name="hockeyapp_feedback_generic_error">An error has occurred</string>
    <string name="add">Add</string>
    <string name="copy_link">Copy link</string>
    <string name="err_text">Cannot load data. Please check your network connection.</string>
    <string name="err_try_again">Try again</string>
    <string name="hidden_from_stories">Hidden from stories</string>
    <string name="hidden_from_stories_desc">You can hide all stories of a user in the story menu</string>
    <string name="like">Like</string>
    <string name="masks_clear_cache">Clear cache of masks</string>
    <string name="money_transfer_from_your_card_desc">Money transfers via your payment card.</string>
    <string name="money_transfer_read_more">More</string>
    <string name="money_transfer_send_money">Send transfer</string>
    <string name="music_saved_playlist">Music Offline</string>
    <string name="music_saved_playlist_boom_hide">Hide</string>
    <string name="music_saved_playlist_boom_open">Open BOOM</string>
    <string name="music_saved_playlist_boom_text">"You can now listen to music offline
 in the BOOM app"</string>
    <string name="music_subs_buy_price">%1$s per month</string>
    <string name="music_subs_text1">Playing music with the locked screen</string>
    <string name="music_subs_text2">No advertising</string>
    <string name="music_subs_text3">"Access to music with no internet connection
in the boom app"</string>
    <string name="music_subs_title">"Listen to music
without limits"</string>
    <string name="music_subs_try_free">Try for free</string>
    <string name="music_subscription_unavailable_region">"The subscription is not available
in your region"</string>
    <string name="my_story">My story</string>
    <string name="my_story_desc">Available to your friends and followers within 24 hours</string>
    <string name="no_friends">You have no friends</string>
    <string name="no_messages">No messages yet</string>
    <string name="open_in_browser">Open in a browser</string>
    <string name="report_content">Report</string>
    <string name="repost">Share</string>
    <string name="save_stories">Save stories</string>
    <string name="save_stories_desc">Published stories will be saved on your device</string>
    <string name="send_to_friend">Share with friend</string>
    <string name="send_with_message">Send via message</string>
    <string name="story_privacy">Who can view my stories</string>
    <string name="story_privacy_desc">The list of users who can view your stories</string>
    <string name="cd_search_icon">Search icon</string>
</resources>