<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:layout_width="fill_parent" android:layout_height="56.0dip" layout="@layout/appkit_toolbar" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="horizontal" android:id="@id/ll_save_stories" android:background="@drawable/picker_white_ripple_bounded" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:padding="16.0dip" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <TextView android:textSize="16.0sp" android:textColor="#ff212121" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save_stories" />
                    <TextView android:textSize="14.0sp" android:textColor="#89000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save_stories_desc" />
                </LinearLayout>
                <android.support.v7.widget.SwitchCompat android:layout_gravity="center_vertical" android:id="@id/switch_save" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dip" />
            </LinearLayout>
            <View android:background="#1e000000" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:id="@id/ll_hidden_from_stories" android:background="@drawable/picker_white_ripple_bounded" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textSize="16.0sp" android:textColor="#ff212121" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hidden_from_stories" />
                <TextView android:textSize="14.0sp" android:textColor="#89000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hidden_from_stories_desc" />
            </LinearLayout>
            <View android:background="#1e000000" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:id="@id/ll_stories_privacy" android:background="@drawable/picker_white_ripple_bounded" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textSize="16.0sp" android:textColor="#ff212121" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/story_privacy" />
                <TextView android:textSize="14.0sp" android:textColor="#89000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/story_privacy_desc" />
            </LinearLayout>
            <View android:background="#1e000000" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <TextView android:textSize="16.0sp" android:textColor="#ff212121" android:gravity="center|left" android:id="@id/tv_clear_masks_cache" android:background="@drawable/picker_white_ripple_bounded" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/masks_clear_cache" />
            <View android:background="#1e000000" android:layout_width="fill_parent" android:layout_height="0.5dip" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>