<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <FrameLayout android:background="#fff5f6f7" android:layout_width="fill_parent" android:layout_height="wrap_content" android:scaleType="center" android:minHeight="176.0dip" />
            <View android:layout_gravity="center_horizontal" android:background="@drawable/ic_music_promo_logo_36dp" android:layout_width="36.0dip" android:layout_height="36.0dip" android:layout_marginTop="32.0dip" />
            <TextView android:textSize="24.0dip" android:textStyle="bold" android:textColor="@color/almost_black" android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="80.0dip" android:text="@string/music_subs_title" android:lineSpacingExtra="4.0dip" />
            <FrameLayout android:layout_gravity="right" android:id="@id/close_btn" android:background="@drawable/highlight" android:clickable="true" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_margin="4.0dip">
                <View android:layout_gravity="center" android:id="@id/close_btn_img" android:layout_width="24.0dip" android:layout_height="24.0dip" />
            </FrameLayout>
        </FrameLayout>
        <TextView android:id="@id/text1" android:layout_marginTop="16.0dip" android:text="@string/music_subs_text1" android:drawableLeft="@drawable/ic_music_promo_lockscreen_24dp" style="@style/TextSubsPromo" />
        <TextView android:id="@id/text2" android:text="@string/music_subs_text2" android:drawableLeft="@drawable/ic_music_promo_ads_24dp" style="@style/TextSubsPromo" />
        <TextView android:id="@id/text3" android:text="@string/music_subs_text3" android:drawableLeft="@drawable/ic_music_promo_cache_24dp" style="@style/TextSubsPromo" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/buy_button" android:background="@drawable/blue_button" android:clickable="true" android:layout_width="fill_parent" android:layout_height="56.0dip" android:layout_marginLeft="24.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="24.0dip" android:layout_marginBottom="24.0dip">
            <TextView android:textAppearance="@style/MediumBold" android:textSize="16.0dip" android:textColor="@color/white" android:gravity="center_horizontal" android:id="@id/button_title" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/music_subs_try_free" />
            <TextView android:textSize="14.0dip" android:textColor="#99ffffff" android:id="@id/button_price" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/music_subs_buy_price" />
            <ProgressBar android:id="@id/progress" android:layout_width="24.0dip" android:layout_height="24.0dip" android:indeterminate="true" style="@style/Base.Widget.AppCompat.ProgressBar" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/buy_button_disable" android:background="@drawable/music_subs_buy_button_disable" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="56.0dip" android:layout_marginLeft="24.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="24.0dip" android:layout_marginBottom="24.0dip">
            <TextView android:textSize="16.0dip" android:textColor="#ff5a5d61" android:gravity="center_horizontal" android:id="@id/buy_button_disable_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/music_subscription_unavailable_region" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>