<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/content_animator" android:paddingTop="?actionBarSize" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/ic_boom_48dp" />
        <TextView android:textSize="14.0dip" android:textColor="#ff71757a" android:gravity="center" android:padding="24.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/music_saved_playlist_boom_text" />
        <TextView android:textAppearance="@style/MediumBold" android:id="@id/button_open" android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/music_saved_playlist_boom_open" style="@style/BlueButton" />
        <TextView android:textAppearance="@style/MediumBold" android:textSize="14.0dip" android:textColor="#ff528bcc" android:gravity="center" android:id="@id/button_hide" android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="32.0dip" android:text="@string/music_saved_playlist_boom_hide" />
    </LinearLayout>
    <FrameLayout android:orientation="horizontal" android:id="@id/toolbar" android:background="@color/brand_primary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?actionBarSize" style="@style/Toolbar">
        <ImageView android:layout_gravity="center_vertical" android:id="@id/back_btn" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginLeft="4.0dip" android:src="@drawable/ic_ab_back" style="@style/ActionButton.White" />
        <com.vk.attachpicker.widget.RobotoMediumTextView android:textSize="20.0dip" android:textColor="@color/music_text_primary_inverse" android:ellipsize="end" android:layout_gravity="center_vertical" android:id="@id/toolbar_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="64.0dip" android:layout_marginRight="48.0dip" android:text="@string/music_saved_playlist" android:maxLines="1" />
    </FrameLayout>
</FrameLayout>