<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_width="fill_parent" android:layout_height="76.0dip">
        <com.vk.attachpicker.widget.MaxWidthFrameLayout android:layout_gravity="center" android:id="@id/fl_send_money" android:background="@drawable/picker_btn_blue_round" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="16.0dip">
            <LinearLayout android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="44.0dip">
                <com.vk.attachpicker.widget.RobotoMediumTextView android:textSize="16.0sp" android:textColor="#ffffffff" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/money_transfer_send_money" />
            </LinearLayout>
        </com.vk.attachpicker.widget.MaxWidthFrameLayout>
    </FrameLayout>
    <TextView android:textSize="16.0sp" android:textColor="#ff909499" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/tv_empty" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="72.0dip" android:layout_marginTop="24.0dip" android:layout_marginRight="72.0dip" android:text="@string/money_transfer_from_your_card_desc" />
    <TextView android:textSize="16.0sp" android:textColor="#ff5181b8" android:gravity="center" android:id="@id/tv_read_more" android:background="@drawable/highlight" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/money_transfer_read_more" />
</LinearLayout>